examples/website/app/requirements.txt
[33mWARNING: the legacy dependency resolver is deprecated and will be removed in future versions of pip-tools. The default resolver will be changed to 'backtracking' in pip-tools 7.0.0. Specify --resolver=backtracking to silence this warning.[0m
Usage: pip-compile [options]

Traceback (most recent call last):
  File "/usr/lib64/python3.11/optparse.py", line 1387, in parse_args
    stop = self._process_args(largs, rargs, values)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/optparse.py", line 1427, in _process_args
    self._process_long_opt(rargs, values)
  File "/usr/lib64/python3.11/optparse.py", line 1480, in _process_long_opt
    opt = self._match_long_opt(opt)
          ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/optparse.py", line 1465, in _match_long_opt
    return _match_abbrev(opt, self._long_opt)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/optparse.py", line 1670, in _match_abbrev
    raise BadOptionError(s)
optparse.BadOptionError: no such option: --resolver

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 370, in _parse_file
    args_str, opts = self._line_parser(line)
                     ^^^^^^^^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 397, in parse_line
    opts, _ = parser.parse_args(shlex.split(options_str), defaults)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib64/python3.11/optparse.py", line 1389, in parse_args
    self.error(str(err))
  File "/usr/lib64/python3.11/optparse.py", line 1569, in error
    self.exit(2, "%s: error: %s\n" % (self.get_prog_name(), msg))
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 440, in parser_exit
    raise OptionParsingError(msg)
pip._internal.req.req_file.OptionParsingError: pip-compile: error: no such option: --resolver


During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "/gen/venv/bin//pip-compile", line 8, in <module>
    sys.exit(cli())
             ^^^^^
  File "/gen/venv/lib/python3.11/site-packages/click/core.py", line 1130, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/click/core.py", line 1055, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/click/core.py", line 1404, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/click/core.py", line 760, in invoke
    return __callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/click/decorators.py", line 26, in new_func
    return f(get_current_context(), *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/gen/venv/lib/python3.11/site-packages/piptools/scripts/compile.py", line 457, in cli
    for ireq in filter(is_pinned_requirement, ireqs):
  File "/gen/venv/lib/python3.11/site-packages/piptools/_compat/pip_compat.py", line 33, in parse_requirements
    for parsed_req in _parse_requirements(
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 145, in parse_requirements
    for parsed_line in parser.parse(filename, constraint):
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 328, in parse
    yield from self._parse_and_recurse(filename, constraint)
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 333, in _parse_and_recurse
    for line in self._parse_file(filename, constraint):
  File "/gen/venv/lib/python3.11/site-packages/pip/_internal/req/req_file.py", line 374, in _parse_file
    raise RequirementsFileParseError(msg)
pip._internal.exceptions.RequirementsFileParseError: Invalid requirement: [33mWARNING: the legacy dependency resolver is deprecated and will be removed in future versions of pip-tools. The default resolver will be changed to 'backtracking' in pip-tools 7.0.0. Specify --resolver=backtracking to silence this warning.[0m
pip-compile: error: no such option: --resolver

